--- a/cluster.ipynb
+++ b/cluster.ipynb
@@ -262,7 +262,7 @@
     "\n",
     "En este caso los algoritmos en los que nos vamos a centrar son K-means, Mini-Batch K-means, GMM y Agglomerative Clustering. Estos algoritmos son los que nos proporcionan un patrón más claro de separación entre clusteres, cada uno con su propia definición.\n",
     "\n",
-    "Analizando"
+    "Analizando las gráficas podemos notar que los clústeres con los valores más altos provienen de los últimos años 2020 y 2021, dando a entender que los goles por champions aumentaron notablemente. Esto es algo que analizaremos más a continuación usando el ranking UEFA y los goles de cada equipo de forma exclusiva durante los últimos 7 años."
    ]
   },
   {
@@ -385,6 +385,22 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es evidente que los clusters más grandes se encuentran centrados en las gráficas, representando al conjunto general de equipos en la Champions. También tenemos un cluster más reducido en los puntos altos muy parecido a los extraídos anteriormente con cada torneo que representan a los equipos con más victorias goles y por tanto puntuación (ya vimos en la regresión lineal que están conectados). \n",
+    "\n",
+    "Vamos a ver que pasa con los cluster si metemos además las victorias de champions y los partidos ganados:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
