--- a/red_neuronal.ipynb
+++ b/red_neuronal.ipynb
@@ -23244,10 +23244,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 , 1\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 60ms/step\n",
+      "Predicción de que gane el equipo local (Real Madrid):\n",
+      "[[4.391234e-08]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el modelo entrenado\n",
+    "model = tf.keras.models.load_model(\"model.h5\")\n",
+    "\n",
+    "# Definir la información del partido\n",
+    "round_number = 1  # Ronda correspondiente\n",
+    "real_madrid_evaluation = 363.0  # Evaluación del Real Madrid\n",
+    "fc_barcelona_evaluation = 264.0  # Evaluación del FC Barcelona\n",
+    "\n",
+    "# Nombres de los equipos\n",
+    "home_team_name = \"Real Madrid\"\n",
+    "away_team_name = \"FC Barcelona\"\n",
+    "\n",
+    "# Mapear los nombres de los equipos a los números únicos usando team_mapping\n",
+    "home_team_name = team_mapping[home_team_name]\n",
+    "away_team_name = team_mapping[away_team_name]\n",
+    "\n",
+    "print(home_team_name, ',', away_team_name)\n",
+    "\n",
+    "# Crear una matriz de características para la predicción\n",
+    "# Suponiendo que la primera columna es el \"Round Number\", la segunda columna es la \"Home Team Evaluation\", la tercera columna es la \"Away Team Evaluation\", la cuarta columna es el \"Home Team\", y la quinta columna es el \"Away Team\".\n",
+    "prediction_features = np.array([[round_number, home_team_name, away_team_name, real_madrid_evaluation, fc_barcelona_evaluation]])\n",
+    "\n",
+    "# Hacer la predicción utilizando el modelo cargado\n",
+    "prediction = model.predict(prediction_features)\n",
+    "\n",
+    "# Imprimir la predicción\n",
+    "print(\"Predicción de que gane el equipo local (Real Madrid):\")\n",
+    "print(prediction)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tras hacer varias pruebas llego a la conclusión de que este modelo no acaba de predecir con mucha exactitud. Puede deberse a que su estructura es muy simple, lo que le ha otorgado esa falsa sensación de precisión. Probemos ahora con el segundo modelo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 77ms/step\n",
+      "Accuracy: 0.75\n",
+      "Confusion Matrix:\n",
+      "[[17  6]\n",
+      " [ 2  7]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      0.74      0.81        23\n",
+      "           1       0.54      0.78      0.64         9\n",
+      "\n",
+      "    accuracy                           0.75        32\n",
+      "   macro avg       0.72      0.76      0.72        32\n",
+      "weighted avg       0.79      0.75      0.76        32\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el modelo\n",
+    "model = tf.keras.models.load_model(\"model2.h5\")\n",
+    "\n",
+    "# Hacer predicciones sobre el conjunto de prueba\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "# Convertir las predicciones a clases (0 o 1)\n",
+    "predicted_classes = (predictions > 0.5).astype(\"int32\")\n",
+    "\n",
+    "# Calcular métricas de evaluación del modelo\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, predicted_classes)\n",
+    "conf_matrix = confusion_matrix(y_test, predicted_classes)\n",
+    "class_report = classification_report(y_test, predicted_classes)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(conf_matrix)\n",
+    "print(\"Classification Report:\")\n",
+    "print(class_report)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 , 3\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 77ms/step\n",
+      "Predicción de que gane el equipo local (Real Madrid):\n",
+      "[[0.8326676]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el modelo entrenado\n",
+    "model = tf.keras.models.load_model(\"model2.h5\")\n",
+    "\n",
+    "# Definir la información del partido\n",
+    "round_number = 1  # Ronda correspondiente\n",
+    "real_madrid_evaluation = 363.0  # Evaluación del Real Madrid\n",
+    "fc_barcelona_evaluation = 264.0  # Evaluación del FC Barcelona\n",
+    "\n",
+    "# Nombres de los equipos\n",
+    "home_team_name = \"Real Madrid\"\n",
+    "away_team_name = \"FC Barcelona\"\n",
+    "\n",
+    "# Mapear los nombres de los equipos a los números únicos usando team_mapping\n",
+    "home_team_name = team_mapping[home_team_name]\n",
+    "away_team_name = team_mapping[away_team_name]\n",
+    "\n",
+    "print(home_team_name, ',', away_team_name)\n",
+    "\n",
+    "# Crear una matriz de características para la predicción\n",
+    "# Suponiendo que la primera columna es el \"Round Number\", la segunda columna es la \"Home Team Evaluation\", la tercera columna es la \"Away Team Evaluation\", la cuarta columna es el \"Home Team\", y la quinta columna es el \"Away Team\".\n",
+    "prediction_features = np.array([[round_number, home_team_name, away_team_name, real_madrid_evaluation, fc_barcelona_evaluation]])\n",
+    "\n",
+    "# Hacer la predicción utilizando el modelo cargado\n",
+    "prediction = model.predict(prediction_features)\n",
+    "\n",
+    "# Imprimir la predicción\n",
+    "print(\"Predicción de que gane el equipo local (Real Madrid):\")\n",
+    "print(prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este está más preparado. Probemos ahora a predecir los partidos de la Champions de este año!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Primero hay que limpiar los datos\n",
+    "champions2023 = pd.read_csv(\"data/champions-league-2023-UTC.csv\")\n",
+    "\n",
+    "# Eliminar las columnas Date, Location y Group\n",
+    "champions2023.drop(columns=['Date', 'Location', 'Group'], inplace=True)\n",
+    "\n",
+    "# Cambiamos Round Number por numeros siguiendo el diccionario\n",
+    "round_number_mapping = {\n",
+    "'1': 1,\n",
+    "'2': 2,\n",
+    "'3': 3,\n",
+    "'4': 4,\n",
+    "'5': 5,\n",
+    "'6': 6,\n",
+    "'Round of 16 - Game 1': 7,\n",
+    "'R16 Game 1': 7,\n",
+    "'Round of 16 - Game 2': 8,\n",
+    "'R16 Game 2': 8,\n",
+    "'Qtr Finals - Game 1': 9,\n",
+    "'QF Game 1': 9,\n",
+    "'Qtr Finals - Game 2': 10,\n",
+    "'QF Game 2': 10,\n",
+    "'Semi Finals - Game 1': 11,\n",
+    "'SF Game 1': 11,\n",
+    "'Semi Finals - Game 2': 12,\n",
+    "'SF Game 2': 12,\n",
+    "'Final': 13\n",
+    "}\n",
+    "\n",
+    "champions2023['Round Number'] = champions2023['Round Number'].map(round_number_mapping).fillna(champions2023['Round Number'])"
+   ]
   },
   {
    "cell_type": "markdown",
