--- a/red_neuronal.ipynb
+++ b/red_neuronal.ipynb
@@ -23424,7 +23424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23457,7 +23457,53 @@
     "'Final': 13\n",
     "}\n",
     "\n",
-    "champions2023['Round Number'] = champions2023['Round Number'].map(round_number_mapping).fillna(champions2023['Round Number'])"
+    "champions2023['Round Number'] = champions2023['Round Number'].map(round_number_mapping).fillna(champions2023['Round Number'])\n",
+    "\n",
+    "#Guardar los datos\n",
+    "champions2023.to_csv(\"data/champions-league-2023.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Match Number  Round Number  Home Team  Away Team Result  \\\n",
+      "0             1             1       25.0        NaN  0 - 0   \n",
+      "1             2             1       55.0       24.0  1 - 3   \n",
+      "2             3             1       36.0       50.0  2 - 0   \n",
+      "3             4             1       34.0        7.0  1 - 1   \n",
+      "4             5             1        8.0       13.0  2 - 0   \n",
+      "\n",
+      "        Home Team Name     Away Team Name  \n",
+      "0             AC Milan          Newcastle  \n",
+      "1           Young Boys         RB Leipzig  \n",
+      "2            Feyenoord             Celtic  \n",
+      "3                Lazio    Atlético Madrid  \n",
+      "4  Paris Saint-Germain  Borussia Dortmund  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Abrir champions2023, mapear los nombres y meter columnas Home Team Name y Away Team Name\n",
+    "champions2023 = pd.read_csv(\"data/champions-league-2023.csv\")\n",
+    "\n",
+    "# Crear una columna Home Team Name que sea una copia de la columna Home Team\n",
+    "champions2023['Home Team Name'] = champions2023['Home Team']\n",
+    "\n",
+    "# Crear una columna Away Team Name que sea una copia de la columna Away Team\n",
+    "champions2023['Away Team Name'] = champions2023['Away Team']\n",
+    "\n",
+    "# Reemplazar nombres de equipos por números en las columnas correspondientes\n",
+    "champions2023['Home Team'] = champions2023['Home Team'].map(team_mapping)\n",
+    "champions2023['Away Team'] = champions2023['Away Team'].map(team_mapping)\n",
+    "\n",
+    "# Ver las primeras filas de los datos\n",
+    "print(champions2023.head())\n"
    ]
   },
   {
