--- a/red_neuronal.ipynb
+++ b/red_neuronal.ipynb
@@ -13091,6 +13091,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tras varias pruebas nos hemos dado cuenta de que no somos capaces de eliminar o mitigar el sobreajuste dado de ampliar la muestra, por lo que vamos a probar a entrenar nuestra red con los datos de uno de los csv:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -25500,15 +25507,15 @@
    ],
    "source": [
     "# Preprocesamiento de datos\n",
-    "X = combined_data[['Round Number', 'Home Team', 'Away Team', 'Home is Winner', 'Home Goals Ratio', 'Away Goals Ratio', 'Home Team Evaluation', 'Away Team Evaluation', 'Penalties', 'Penalties Winner']].values\n",
-    "y = combined_data[['Home Team Goals', 'Away Team Goals']].values\n",
+    "X = champions_data[['Round Number', 'Home Team', 'Away Team', 'Home is Winner', 'Home Goals Ratio', 'Away Goals Ratio', 'Home Team Evaluation', 'Away Team Evaluation', 'Penalties', 'Penalties Winner']].values\n",
+    "y = champions_data[['Home Team Goals', 'Away Team Goals']].values\n",
     "\n",
     "# Separar características categóricas y numéricas\n",
     "categorical_features = ['Home Team', 'Away Team', 'Winner']\n",
     "numeric_features = ['Round Number', 'Home is Winner', 'Home Goals Ratio', 'Away Goals Ratio', 'Home Team Evaluation', 'Away Team Evaluation', 'Penalties', 'Penalties Winner']\n",
     "\n",
-    "X_categorical = combined_data[categorical_features].values\n",
-    "X_numeric = combined_data[numeric_features].values\n",
+    "X_categorical = champions_data[categorical_features].values\n",
+    "X_numeric = champions_data[numeric_features].values\n",
     "\n",
     "# Codificar características categóricas\n",
     "X_categorical_encoded = np.zeros_like(X_categorical)\n",
