--- a/red_neuronal.ipynb
+++ b/red_neuronal.ipynb
@@ -23431,7 +23431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Primero hay que limpiar los datos\n",
+    "'''# Primero hay que limpiar los datos\n",
     "champions2023 = pd.read_csv(\"data/champions-league-2023-UTC.csv\")\n",
     "\n",
     "# Eliminar las columnas Date, Location y Group\n",
@@ -23463,7 +23463,7 @@
     "champions2023['Round Number'] = champions2023['Round Number'].map(round_number_mapping).fillna(champions2023['Round Number'])\n",
     "\n",
     "#Guardar los datos\n",
-    "champions2023.to_csv(\"data/champions-league-2023.csv\", index=False)"
+    "champions2023.to_csv(\"data/champions-league-2023.csv\", index=False)'''"
    ]
   },
   {
@@ -23492,7 +23492,7 @@
     }
    ],
    "source": [
-    "#Abrir champions2023, mapear los nombres y meter columnas Home Team Name y Away Team Name\n",
+    "'''#Abrir champions2023, mapear los nombres y meter columnas Home Team Name y Away Team Name\n",
     "champions2023 = pd.read_csv(\"data/champions-league-2023.csv\")\n",
     "\n",
     "# Crear una columna Home Team Name que sea una copia de la columna Home Team\n",
@@ -23506,7 +23506,8 @@
     "champions2023['Away Team'] = champions2023['Away Team'].map(team_mapping)\n",
     "\n",
     "# Ver las primeras filas de los datos\n",
-    "print(champions2023.head())\n"
+    "print(champions2023.head())\n",
+    "'''"
    ]
   },
   {
