--- a/red_neuronal.ipynb
+++ b/red_neuronal.ipynb
@@ -25538,13 +25538,66 @@
     "X_train = X_train / np.max(X_train, axis=0)\n",
     "X_test = X_test / np.max(X_test, axis=0)\n",
     "\n",
-    "# Preparar el modelo para la predicción de los goles de los equipos\n",
+    "ajustes = []\n",
+    "capas = [\"softmax\", \"relu\", \"sigmoid\", \"tanh\", \"linear\"]\n",
+    "optimizador = [\"SGD\", \"RMSprop\", \"Adam\", \"AdamW\", \"Adadelta\",\n",
+    "               \"Adagrad\", \"Adamax\", \"Adafactor\", \"Nadam\", \"Ftrl\", \"Lion\"]\n",
+    "\n",
+    "num_capas = [1, 2, 3, 4, 5]\n",
+    "num_neuronas = [16, 32, 64, 128, 256, 512, 1024]\n",
+    "learning_rate = [0.1, 0.01, 0.001, 0.0001]\n",
+    "\n",
+    "for _ in range(50):\n",
+    "    # Configuración aleatoria\n",
+    "    configuracion_aleatoria = {\n",
+    "        \"capa_activacion\": random.choice(capas),\n",
+    "        \"optimizador\": random.choice(optimizador),\n",
+    "        \"num_capas\": random.choice(num_capas),\n",
+    "        \"num_neuronas\": random.choice(num_neuronas),\n",
+    "        \"learning_rate\": random.choice(learning_rate)\n",
+    "    }\n",
+    "\n",
+    "    # Crear el modelo con la configuración aleatoria\n",
+    "    model = tf.keras.models.Sequential()\n",
+    "    model.add(tf.keras.layers.Dense(\n",
+    "        configuracion_aleatoria[\"num_neuronas\"], input_shape=(X_train.shape[1],), activation=configuracion_aleatoria[\"capa_activacion\"]))\n",
+    "    for _ in range(configuracion_aleatoria[\"num_capas\"] - 1):\n",
+    "        model.add(tf.keras.layers.Dense(\n",
+    "            configuracion_aleatoria[\"num_neuronas\"], activation=configuracion_aleatoria[\"capa_activacion\"]))\n",
+    "        model.add(tf.keras.layers.Dropout(0.5))\n",
+    "\n",
+    "    model.add(tf.keras.layers.Dense(1, activation='sigmoid', name='home_goals_output'))\n",
+    "\n",
+    "    # Compilar el modelo con el optimizador y learning rate aleatorio\n",
+    "    optimizer = getattr(tf.keras.optimizers, configuracion_aleatoria[\"optimizador\"])(\n",
+    "        learning_rate=configuracion_aleatoria[\"learning_rate\"])\n",
+    "    model.compile(optimizer=optimizer,\n",
+    "                  loss='mean_squared_error', metrics=['mae'])\n",
+    "\n",
+    "    # Entrenar el modelo\n",
+    "    history = model.fit(X_train, y_home_goals_train, epochs=300, batch_size=64, validation_split=0.3)\n",
+    "\n",
+    "    # Evaluar modelo para predicción de los goles del equipo local\n",
+    "    loss, mae = model.evaluate(X_test, y_home_goals_test)\n",
+    "    print(\"Test Loss (Home Goals):\", loss)\n",
+    "    print(\"Test MAE (Home Goals):\", mae)\n",
+    "\n",
+    "    # Si no se alcanzaron las condiciones de término, se guarda la configuración y se ordena por precisión en orden ascendente y evitando duplicados\n",
+    "    ajustes.append((configuracion_aleatoria, accuracy, loss))\n",
+    "    print(ajustes)\n",
+    "\n",
+    "    # Guardar en un archivo txt\n",
+    "    with open('ajustes_goles1.txt', 'w') as f:\n",
+    "        for item in ajustes:\n",
+    "            f.write(\"%s\\n\" % str(item))\n",
+    "\n",
+    "'''# Preparar el modelo para la predicción de los goles de los equipos\n",
     "model_goals = Sequential()\n",
     "model_goals.add(Dense(128, input_shape=(X_train.shape[1],), activation='relu'))\n",
     "model_goals.add(Dropout(0.5))\n",
     "model_goals.add(Dense(64, activation='relu'))\n",
     "model_goals.add(Dropout(0.5))\n",
-    "model_goals.add(Dense(32, activation='relu'))\n",
+    "model_goals.add(Dense(32, activation='sigmoid'))\n",
     "\n",
     "# Modelo de salida para la predicción de los goles del equipo local\n",
     "model_goals.add(Dense(1, name='home_goals_output'))\n",
@@ -25556,7 +25609,7 @@
     "# Evaluar modelo para predicción de los goles del equipo local\n",
     "loss, mae = model_goals.evaluate(X_test, y_home_goals_test)\n",
     "print(\"Test Loss (Home Goals):\", loss)\n",
-    "print(\"Test MAE (Home Goals):\", mae)"
+    "print(\"Test MAE (Home Goals):\", mae)'''"
    ]
   },
   {
@@ -26176,7 +26229,7 @@
    ],
    "source": [
     "\n",
-    "# Modelo de salida para la predicción de los goles del equipo visitante\n",
+    "'''# Modelo de salida para la predicción de los goles del equipo visitante\n",
     "model_goals.add(Dense(1, name='away_goals_output'))\n",
     "\n",
     "# Compilar y entrenar el modelo...\n",
@@ -26186,7 +26239,7 @@
     "# Evaluar modelo para predicción de los goles del equipo visitante\n",
     "loss, mae = model_goals.evaluate(X_test, y_away_goals_test)\n",
     "print(\"Test Loss (Away Goals):\", loss)\n",
-    "print(\"Test MAE (Away Goals):\", mae)"
+    "print(\"Test MAE (Away Goals):\", mae)'''"
    ]
   }
  ],
