preparar el final

--- a/red_neuronal.ipynb
+++ b/red_neuronal.ipynb
@@ -13091,6 +13091,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar combined_data\n",
+    "combined_data.to_csv(\"data/champions-league-combined.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24874,7 +24884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta próxima sección entrenaremos un modelo que prediga la media de goles por equipo en un partido"
+    "En esta próxima sección entrenaremos un modelo que prediga la media de goles por equipo en un partido:"
    ]
   },
   {
@@ -25507,16 +25517,19 @@
     }
    ],
    "source": [
+    "# Cargar combined_data\n",
+    "combined_data = pd.read_csv('data/champions-league-combined.csv')\n",
+    "\n",
     "# Preprocesamiento de datos\n",
-    "X = champions_data[['Round Number', 'Home Team', 'Away Team', 'Home is Winner', 'Home Goals Ratio', 'Away Goals Ratio', 'Home Team Evaluation', 'Away Team Evaluation', 'Penalties', 'Penalties Winner']].values\n",
-    "y = champions_data[['Home Team Goals', 'Away Team Goals']].values\n",
+    "X = combined_data[['Round Number', 'Home Team', 'Away Team', 'Home is Winner', 'Home Goals Ratio', 'Away Goals Ratio', 'Home Team Evaluation', 'Away Team Evaluation', 'Penalties', 'Penalties Winner']].values\n",
+    "y = combined_data[['Home Team Goals', 'Away Team Goals']].values\n",
     "\n",
     "# Separar características categóricas y numéricas\n",
     "categorical_features = ['Home Team', 'Away Team', 'Winner']\n",
     "numeric_features = ['Round Number', 'Home is Winner', 'Home Goals Ratio', 'Away Goals Ratio', 'Home Team Evaluation', 'Away Team Evaluation', 'Penalties', 'Penalties Winner']\n",
     "\n",
-    "X_categorical = champions_data[categorical_features].values\n",
-    "X_numeric = champions_data[numeric_features].values\n",
+    "X_categorical = combined_data[categorical_features].values\n",
+    "X_numeric = combined_data[numeric_features].values\n",
     "\n",
     "# Codificar características categóricas\n",
     "X_categorical_encoded = np.zeros_like(X_categorical)\n",
